LPD-19189 Make it clear that test with CLDR as we are going to force java provider to be CLDR.